build/log/idf_py_stderr_output_287296
/home/pi/wifiRelay_2/main/wifiRelay.c: In function 'app_main':
/home/pi/wifiRelay_2/main/wifiRelay.c:592:5: error: implicit declaration of function 'wifi_connect_from_nvs' [-Wimplicit-function-declaration]
  592 |     wifi_connect_from_nvs();///added
      |     ^~~~~~~~~~~~~~~~~~~~~
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:87: esp-idf/main/CMakeFiles/__idf_main.dir/wifiRelay.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:6157: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:149: all] Error 2
